samples/_failures_safe/1761042425_526dc1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f58cee1.c: In function ‘read_operator’:
./samples/SAFE/__tmp_0f58cee1.c:167:9: error: expected expression at end of input
  167 |         } else
      |         ^
./samples/SAFE/__tmp_0f58cee1.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f58cee1.c:167:9: error: expected declaration or statement at end of input
